fixed some spacing issues on the ai-content card in tablet display

--- a/style.css
+++ b/style.css
@@ -457,8 +457,8 @@ p {
     .ai-content {
         grid-column: 2;
         grid-row: 11/span 4;
-        justify-content: space-evenly;
-        gap: 3rem;
+        justify-content: center;
+        gap: 5rem;
     }
 
     .consistent-schedule {
